# CppSems25-26Public

./: .clang-format  .clang-tidy  .clangd  .gitignore  README.md
Semestr1/Sem12_inheritance/: 2_1_inheritance_types.cpp  2_2_main_friend.cpp  2_3_inaccessible_context.cpp  2_4_test_private_base.cpp  2_5_answer_private_base.cpp  2_6_test_access_madness.cpp  2_7_answer_access_madness.cpp  3_1_parent_ctor.cpp  3_2_default_derived_ctor.cpp  3_3_ctors_order.cpp  3_4_use_base_ctors.cpp  3_5_slicing.cpp  4_1_same_method_names.cpp  4_2_diff_methods_signatures.cpp  4_3_mode_funcs.cpp  5_ebo.cpp  6_simple_casts.cpp  7_1_multiple_inheritance.cpp  7_2_diamond_names_lookup.cpp  7_3_diamond_casts.cpp  7_4_extra_pointer_to_member.cpp  7_5_inaccessible_base.cpp  README.md
Semestr1/Sem13_virtual/: README.md
Semestr1/Sem14_templates_1/: 1_basics.cpp  2_1_specialisation.cpp  2_2_instantiation.cpp  2_3_implicit_instantiation.cpp  2_4_delete_instantiation.cpp  2_5_spec_more_params.cpp  2_6_static_fields.cpp  3_1_tad.cpp  3_2_ctad.cpp  3_3_default_params.cpp  3_4_deduction_spec.cpp  3_5_correct.cpp  4_1_nttp.cpp  4_2_matrix.cpp  4_3.cpp  5_1_overloading.cpp  5_2_overloading.cpp  6_1_partial.cpp  6_2_partial_class.cpp  6_4_partial_function.cpp  (+7 more)
Semestr1/Sem5_compilation_sanity_debug/clion_debug/: .clang-format  .clang-tidy  A.cpp  B.cpp  CMakeLists.txt  debug_merge_sort.cpp  debug_simple.cpp
Semestr2/Sem2_iters_algo/prac/safe-transform/: CMakeLists.txt  README.md
Semestr2/Sem2_iters_algo/prac/safe-transform/src/: transform.h
Semestr2/Sem2_iters_algo/prac/safe-transform/tests/: test.cpp
(+668 files in other folders)
